--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,10 @@ html {
 
 body {
     width: 100%;
-    background-color: var(--black10);
+    min-height: 100vh;
+    /* FIXME - Ativar bg color*/
+    /* background-color: var(--black10); */
+    background: linear-gradient(180deg, #050607 5%, #350207 20%, #E10234 107.74%);
 }
 
 .bg-image {
@@ -100,11 +103,63 @@ h6 {
 	width: 100%;
 	z-index: 100;
 	transition: all .2s ease;
-	box-shadow: 0 1px 25px rgba(0,0,0, .1);
+  /* FIXME - Ativar sombra do header*/
+	/* box-shadow: 0 1px 25px rgba(0,0,0, .1); */
 }
 #site-header.hide {
 	top: -70px;
 }
+
+/* PARALLAX EFFECT =============== */
+.parallax {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 100px;
+}
+
+/* .parallax img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+} */
+
+.mountain,
+.mountain-glow {
+  width: 100%;
+}
+
+.mountains,
+.mountain-glow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  height: 357px;
+
+  align-items: center;
+}
+
+.mountains img {
+  width: 50%;
+}
+
+.mountain-right {
+  margin-bottom: 7px;
+}
+
+.glow {
+  width: 100%;
+}
+
+.mountain-glow {
+  padding-bottom: 7px;
+}
+
+
+
+
 
 
 /* MENU STYLES =============== */
