add page elements

--- a/public/style.css
+++ b/public/style.css
@@ -253,3 +253,9 @@ main {
 .icon-outlook {
   color: var(--white20);
 }
+
+/* PAGE-ELEMENTS STYLES =============== */
+.page-elements {
+  position: absolute;
+  z-index: -1;
+}
