fix background image path

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .bg-image {
-  background: url("bg-hero.jpg") no-repeat center fixed;
+  background: url("./bg-hero.jpg") no-repeat center fixed;
 }
 
 a {
