--- a/style.css
+++ b/style.css
@@ -84,7 +84,20 @@ img {
 }
 
 .button {
-  
+  background-color: var(--red10);
+  color: var(--white10);
+  letter-spacing: 0.1rem;
+  height: 3.5rem;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 2rem;
+  border-radius: 0.25rem;
+  font: 500 1.2rem 'Saira Condensed', sans-serif;
+  transition: background 0.3s;
+}
+
+.button:hover {
+  background-color: var(--red20);
 }
 
 /* GENERAL STYLES =============== */
@@ -114,18 +127,15 @@ img {
   left: 10px;
 }
 
-
-
-
-
 /* FONTS STYLES =============== */
 body {
   font: 400 1rem 'Orbitron', sans-serif;
 }
 
 h1 {
-  font: 700 1rem 'Orbitron', sans-serif; 
+  font: 700 3rem 'Orbitron', sans-serif; 
   color: var(--white10);
+  letter-spacing: .2rem;
 }
 
 h2, h3, h4, h5, h6, p, a {
