--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -29,6 +33,7 @@ a {
   --black30: #110b0b;
   
   --gradient-red: linear-gradient(180deg, #050607 5%, #350207 20%, #E10234 107.74%);
+  --gradoemt-red10: linear-gradient(to right, #050607,#350207, #e10234);
 
   --header-height: 4.5rem;
 }
@@ -44,40 +49,6 @@ body {
 .bg-image {
   background: url("./bg-hero.jpg") no-repeat center fixed;
 }
-
-/* HEADER STYLES =============== */
-#header {
-  margin-bottom: 2rem;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  box-shadow: 0 1px 25px rgba(0,0,0, .1);
-  background-color: var(--gradient-red);
-}
-
-nav {
-  height: var(--header-height);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.logo {
-  font: 700 1rem 'Orbitron', sans-serif;
-  color: var(--white10);
-}
-
-span {
-  color: var(--red10);
-}
-
-main {
-  margin-top: var(--header-height);
-}
-
-/* HEADER STYLES =============== */
 
 /* GENERAL STYLES =============== */
 .container {
@@ -123,16 +94,33 @@ main {
 .button:hover {
   background-color: var(--red20);
 }
+/* GENERAL STYLES =============== */
 
-#home .socials i {
-  margin: 0 50px;
-  font-size: 1.5rem;
-  color: var(--white10);
-  height: 500px;
+
+/* HEADER STYLES =============== */
+#header {
+  margin-bottom: 2rem;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  box-shadow: 0 1px 25px rgba(0,0,0, .1);
 }
 
+.logo {
+  font: 700 1rem 'Orbitron', sans-serif;
+  color: var(--white10);
+}
 
-/* GENERAL STYLES =============== */
+span {
+  color: var(--red10);
+}
+
+main {
+  margin-top: calc(var(--header-height) + 2rem);
+}
+/* HEADER STYLES =============== */
 
 /* HERO STYLES =============== */
 #home .container {
@@ -167,15 +155,83 @@ main {
   top: -88px;
   left: 30%;
 }
+/* HERO STYLES =============== */
+
+/* NAVIGATION STYLES =============== */
+nav {
+  height: var(--header-height);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav ul li {
+  text-align: center;
+}
+
+nav ul li a {
+  transition: color 0.3s ease;
+  position: relative;
+}
+
+nav ul li a:hover {
+  color: var(--red10);
+}
+
+nav ul li a::after {
+  content: "";
+  width: 0;
+  height: 2px;
+  background: var(--gradoemt-red10);
+
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+
+  transition: width 0.3s ease;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+
+  background: var(--black10);
+
+  height: 100vh;
+  width: 100vw;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+nav.show .menu {
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem
+}
 
 
+/* NAVIGATION STYLES =============== */
 
 /* FONTS STYLES =============== */
 body {
   font: 400 1rem 'Orbitron', sans-serif;
 }
 
-h1 {
+.title {
   font: 700 4rem 'Orbitron', sans-serif;
   line-height: 76px;
   color: var(--white10);
