--- a/style.css
+++ b/style.css
@@ -223,6 +223,25 @@ nav.show ul.grid {
   gap: 4rem
 }
 
+.toogle {
+  color: var(--white10);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .close {
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  right: 1.5rem;
+}
+
+nav.show .close {
+  visibility: visible;
+  opacity: 1;
+}
+
 
 /* NAVIGATION STYLES =============== */
 
