--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ body {
   height: 100vh;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
 .grid {
   display: grid;
   gap: 2rem;
@@ -260,4 +264,60 @@ body {
 h2, h3, h4, h5, h6, p, a {
     font: 400 1rem 'Saira Condensed', sans-serif;
     color: var(--white10);
+}
+
+/* CARDS STYLES =============== */
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 820px;
+  background: #350207;
+  /* background: linear-gradient(128.94deg, rgba(225, 2, 52, 0.4) 27.68%, rgba(225, 2, 52, 0) 81.95%); */
+  opacity: 0.8;
+  box-shadow: 8px 8px 20px rgba(31, 0, 3, 0.25);
+  border-radius: 2px;
+}
+
+.card img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 235px;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+}
+
+.card .card-content {
+  padding: 1.5rem;
+}
+
+.card .card-content .card-title {
+  font: 500 1.5rem 'Saira Condensed', sans-serif;
+  line-height: 32px;
+  letter-spacing: 2px;
+}
+
+.card .card-content .card-subtitle {
+  color: var(--red10);
+  font: 400 1.2rem 'Saira Condensed', sans-serif;
+  line-height: 18px;
+}
+
+.card .card-content .card-text{
+  margin-top: 1rem;
+}
+
+.card .card-content .social {
+  margin-top: 1rem;
+  display: flex;
+  gap: 16px;
+  font-size: 1.5rem;
+  color: var(--white10);
 }
