--- a/style.css
+++ b/style.css
@@ -109,7 +109,11 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
-  box-shadow: 0 1px 25px rgba(0,0,0, .1);
+  transition: all 0.2s ease;
+}
+
+#header.hide {
+	top: -70px;
 }
 
 .logo {
