--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 .section {
   padding: 5rem 0;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .section .title {
@@ -131,6 +131,10 @@ main {
 /* HEADER STYLES =============== */
 
 /* HERO STYLES =============== */
+#home {
+  height: 100vh;
+}
+
 #home .container {
   margin: 0;
 }
