fix: change hero image section

--- a/style.css
+++ b/style.css
@@ -52,10 +52,14 @@ body {
 }
 
 .bg-image {
-  background: url("./bg-hero.jpg") no-repeat center fixed;
+  background: url("./bg-hero.jpg") no-repeat center;
 }
 
 /* GENERAL STYLES =============== */
+.container-hero {
+  margin-top: calc(var(--header-height) + 2rem);
+}
+
 .container {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
@@ -130,9 +134,6 @@ span {
   color: var(--red10);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
 /* HEADER STYLES =============== */
 
 /* HERO STYLES =============== */
