--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.show-menu {
+    @apply opacity-100 visible bg-theme h-screen w-screen fixed top-0 left-0 grid place-content-center
+}
+
+#toggle {
+    @apply text-base cursor-pointer transition ease-in linear delay-75
+}
