--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,400;0,700;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,200;0,300;0,400;0,700;1,100&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.layout {
+  max-width: 68.75rem;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
