--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.layout {
-  max-width: 68.75rem;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
+.container {
+  @apply max-w-[68.75rem] w-[90%] mx-auto
 }
