--- a/src/index.css
+++ b/src/index.css
@@ -16,24 +16,12 @@ a {
   @apply cursor-point
 }
 
-.sidenav-in {
+.sidenav {
 	-webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 	        animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  -webkit-animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-	        animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
 @-webkit-keyframes slide-left {
-  0% {
-    -webkit-transform: translateX(480px);
-            transform: translateX(480px);
-  }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-  }
-}
-@keyframes slide-left {
   0% {
     -webkit-transform: translateX(480px);
             transform: translateX(480px);
