--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   scroll-behavior: smooth;
 }
 
+/* Section Wrapper */
 .container-canva {
   @apply max-w-[93.75rem] w-[90%] mx-auto my-4
 }
@@ -30,4 +31,37 @@ a {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
+}
+
+/* Spacing Base Styles */
+.padding {
+  @apply p-4
+}
+/* Text Base Styles */
+.heading1 {
+  @apply font-bold sm:text-5xl md:text-6xl lg:text-7xl
+}
+
+/* Display Flex Basics Styles */
+.flex-center {
+  @apply flex justify-center items-center
+}
+
+.flex-start { 
+  @apply flex justify-center items-start
+}
+
+/* Border Radius  */
+.border-radius {
+ @apply xs:rounded-md md:rounded-lg lg:rounded-[10px]
+}
+
+.bg-grid-pattern {
+  background-color: #202020;
+  /* background: radial-gradient(at left top, rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0)); */
+  background-image: url(/assets/background-pattern.svg);
+}
+
+.blk-gradient {
+  @apply bg-[radial-gradient(ellipse_at_top_left,_var(--tw-gradient-stops))] from-black20 to-black
 }
