feat: :art: create basic social media cards structure

--- a/src/index.css
+++ b/src/index.css
@@ -42,13 +42,17 @@ a {
   @apply font-bold text-4xl sm:text-6xl md:text-7xl lg:text-8xl
 }
 
+.heading4 {
+  @apply font-bold text-xl
+}
+
 .paragraph {
   @apply text-xs md:text-sm
 }
 
 /* Display Flex Basics Styles */
 .flex-center {
-  @apply flex flex-col justify-center items-center
+  @apply flex flex-col items-center justify-center
 }
 
 .flex-start { 
